<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="22sp"
        android:text="@string/txtTaoBang"
        android:textStyle="bold"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TableName"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:id="@+id/editTableName"
        android:textSize="20sp"
        android:textColorHighlight="@color/colorAccent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnNewTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/colorWhite"
            android:text="@string/NewTable"
            android:textColor="@color/colorAccent"
            android:layout_alignParentEnd="true"/>

        <!--<Button-->
            <!--android:id="@+id/btnCancel"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:padding="10dp"-->
            <!--android:background="@color/colorWhite"-->
            <!--android:text="@string/Cancel"-->
            <!--android:textColor="@color/colorAccent"-->
            <!--android:layout_toStartOf="@+id/btnNewTable"/>-->
    </RelativeLayout>

</LinearLayout>