<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    tools:ignore="VectorDrawableCompat"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@drawable/header"
        android:id="@+id/bgHeader"
        android:elevation="5dp"
        android:contentDescription="@string/header" />

    <TextView
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:textSize="17sp"
        android:text="Chào mừng đến với TASE"
        android:textColor="@color/colorWhite"/>

    <TextView
        android:elevation="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLogin"
        android:transitionName="txtLogin"
        android:layout_below="@+id/txtTitle"
        android:layout_alignStart="@+id/txtTitle"
        android:textSize="30sp"
        android:text="Đăng nhập"
        android:textColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:src="@drawable/circletransparant"
        android:layout_below="@+id/bgHeader"
        android:layout_marginTop="80dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-100dp"/>

    <ImageView
        android:id="@+id/circle2"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:src="@drawable/circletransparant"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="-100dp"/>
    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:src="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-30dp"/>
    <ImageView
        android:id="@+id/circle4"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:src="@drawable/circletransparant"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="-50dp"
        android:layout_toStartOf="@+id/circle3"/>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp">
            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="50dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Email"
                        android:textSize="14sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/colorPurple"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:drawableEnd="@drawable/ic_person"
                        android:inputType="textEmailAddress"
                        android:drawablePadding="30dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mật khẩu"
                        android:textSize="14sp"
                        android:layout_margin="15dp"
                        android:textColor="@color/colorPurple"
                        android:textStyle="bold"
                        android:id="@+id/tvPassword"/>
                    <EditText
                        android:id="@+id/editPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:inputType="textPassword"
                        android:drawableEnd="@drawable/ic_lock"
                        android:drawablePadding="30dp"
                        android:padding="10dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:transitionName="circleTes"
                android:layout_alignTop="@+id/cardView"
                android:layout_alignEnd="@+id/cardView"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="-20dp">
                <ImageButton
                    android:id="@+id/imgRegister"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_add"
                    android:background="@drawable/circle"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardView"
                android:layout_alignStart="@id/cardView"
                android:layout_alignEnd="@id/cardView"
                android:elevation="10dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="-50dp">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:text="Đăng nhập"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/bg_ui"/>
            </RelativeLayout>
            <Button
                android:id="@+id/changePass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_marginTop="20dp"
                android:text="Quên mật khẩu?"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/cardView"
                android:textColor="#2460a0"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/TaSe"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/changePass"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>